Fix encoding and add/change translations

--- a/_data/logiciels_libres-open_source_software/apache.yml
+++ b/_data/logiciels_libres-open_source_software/apache.yml
@@ -27,5 +27,4 @@ admininstrations:
           fr: "Divers"
         description: 
           en: "Used to server many Web sites."
-          fr: "Utilisé pour servir plusieur site Web."
-
+          fr: "UtilisÃ© pour servir plusieur site Web."
