[GCTools] Elgg Etherpad Grafana Limesurvez Matomo MediaWiki RocketChat Wekan

--- a/_data/logiciels_libres-open_source_software/firefox.yml
+++ b/_data/logiciels_libres-open_source_software/firefox.yml
@@ -13,8 +13,12 @@ name:
 tags: 
   en:
     - "Web browser"
+    - Desktop
+    - Mobile
   fr: 
     - "Navigateur Web"
+    - "Poste de travail"
+    - Mobile
 admininstrations: 
   - 
     adminCode: pch
