Add link to choosealicence descriptions. adjust licences

--- a/_data/code/federal/asc-csa.yml
+++ b/_data/code/federal/asc-csa.yml
@@ -18,7 +18,7 @@ releases:
           URL: 
             en: "https://bitbucket.org/apogy/ca.gc.asc_csa.apogy/src/747025c088c08234105d84ebbf931b2d3100bcea/License-en.txt"
             fr: "https://bitbucket.org/apogy/ca.gc.asc_csa.apogy/src/747025c088c08234105d84ebbf931b2d3100bcea/License-fr.txt"
-          name: EPLv1
+          name: EPL-1.0
     repositoryURL: 
       en: "https://bitbucket.org/apogy/ca.gc.asc_csa.apogy"
       fr: "https://bitbucket.org/apogy/ca.gc.asc_csa.apogy"
