--- a/_data/logiciels_libres-open_source_software/matomo.yml
+++ b/_data/logiciels_libres-open_source_software/matomo.yml
@@ -6,7 +6,7 @@ homepageURL:
   en: "https://matomo.org/"
   fr: "https://matomo.org/"
 licenses: 
-  - GPLv3
+  - GPL-3.0
 name: 
   en: "Matomo"
   fr: "Matomo"
