--- a/_data/logiciels_libres-open_source_software/notepad-plus-plus.yml
+++ b/_data/logiciels_libres-open_source_software/notepad-plus-plus.yml
@@ -6,7 +6,7 @@ homepageURL:
   en: "https://notepad-plus-plus.org"
   fr: "https://notepad-plus-plus.org/fr"
 licenses: 
-  - GPLv2
+  - GPL-2.0
 name: 
   en: Notepad++
   fr: Notepad++
