--- a/_data/administrations/federal.yml
+++ b/_data/administrations/federal.yml
@@ -37,3 +37,9 @@
   name:
     en: Treasury Board of Canada Secretariat
     fr: Secrétariat du Conseil du Trésor du Canada
+    
+- code: ssc-spc
+  name:
+    en: Shared Services Canada
+    fr: Services Partagés du Canada
+    
