--- a/_data/administrations/federal.yml
+++ b/_data/administrations/federal.yml
@@ -28,6 +28,11 @@
     en: Global Affairs Canada
     fr: Affaires mondiales Canada
 
+- code: nrc-cnrc
+  name:
+    en: National Research Council Canada
+    fr: Conseil national de recherches Canada
+
 - code: pch
   name:
     en: Canadian Heritage
@@ -43,6 +48,11 @@
     en: Royal Canadian Mounted Police
     fr: Gendarmerie royale du Canada
 
+- code: ssc-spc
+  name:
+    en: Shared Services Canada
+    fr: Services Partagés du Canada
+
 - code: tbs-sct
   name:
     en: Treasury Board of Canada Secretariat
@@ -52,9 +62,4 @@
   name:
     en: Public Services and Procurement Canada
     fr: Services publics et Approvisionnement Canada
-    
-- code: ssc-spc
-  name:
-    en: Shared Services Canada
-    fr: Services Partagés du Canada
-    
+   
