--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ title:
   en: Open Resource Exchange
   fr: Échange de ressources ouvert
 description:
-  en: Canada.ca blog
-  fr: blogue de Canada.ca
+  en: Open source software used and released by Canadian public administrations
+  fr: Logiciels libres utilisés et diffusés par les administrations publiques Canadiennes
 index:
   en: index.html
   fr: accueil.html
