--- a/_data/logiciels_libres-open_source_software/docker.yml
+++ b/_data/logiciels_libres-open_source_software/docker.yml
@@ -3,8 +3,8 @@ description:
   en: "Performs operating-system-level virtualization also known as containerization"
   fr: "Effectue une virtualisation au niveau du système d'exploitation, également appelée conteneurisation"
 homepageURL:
-  en: "https://www.docker.com/"
-  fr: "https://www.docker.com/"
+  en: "https://www.docker.com"
+  fr: "https://www.docker.com"
 licenses: 
   - Apache-2.0
 name: 
@@ -21,24 +21,35 @@ tags:
     - Infrastructure
 admininstrations: 
   - 
-    adminCode: tbs-sct
+    adminCode: ised-isde
     uses: 
       - 
         contact: 
-          email: "ilia.salem@tbs-sct.gc.ca"
+          email: "andrew.pitt@canada.ca"
         name: 
           en: ~
           fr: ~
         description: 
-          en: "Development and deployment process"
-          fr: "Processus de développements et déploiements"
-
+          en: "Development"
+          fr: "Développement"
   - 
     adminCode: statcan
     uses: 
       - 
         contact: 
           email: "michael.goit@canada.ca"
+        name: 
+          en: ~
+          fr: ~
+        description: 
+          en: "Development and deployment process"
+          fr: "Processus de développements et déploiements"
+  - 
+    adminCode: tbs-sct
+    uses: 
+      - 
+        contact: 
+          email: "ilia.salem@tbs-sct.gc.ca"
         name: 
           en: ~
           fr: ~
