Add Mediawiki and Notepad++ use from APM

--- a/_data/administrations/federal.yml
+++ b/_data/administrations/federal.yml
@@ -58,6 +58,11 @@
     en: Fisheries and Oceans Canada
     fr: Pêches et Océans Canada
 
+- code: fin
+  name: 
+    en: Department of Finance Canada
+    fr: Ministère des Finances Canada
+
 - code: fintrac-canafe
   name:
     en: Financial Transactions and Reports Analysis Centre
