Add Docker and Firefox use from APM

--- a/_data/logiciels_libres-open_source_software/docker.yml
+++ b/_data/logiciels_libres-open_source_software/docker.yml
@@ -56,3 +56,15 @@ admininstrations:
         description: 
           en: "Digital Collaboration Division development and deployment"
           fr: "Développement et déploiement de la Division de la collaboration numérique"
+  - 
+    adminCode: nrcan
+    uses: 
+      - 
+        contact: 
+          email: ~
+        name: 
+          en: ~
+          fr: ~
+        description: 
+          en: "APM data"
+          fr: "Données du APM"
