Add JSON output for Admininstrations and OSS

--- a/_data/administrations/municipal.yml
+++ b/_data/administrations/municipal.yml
@@ -1,11 +1,11 @@
 - code: mtl_qc
-  provinceCode: qc
+  provinceCode: "qc"
   name:
     en: City of Montreal
     fr: Ville de Montréal
 
 - code: ottawa_on
-  provinceCode: on
+  provinceCode: "on"
   name:
     en: City of Ottawa
     fr: Ville d'Ottawa
