--- a/_data/logiciels_libres-open_source_software/qgis.yml
+++ b/_data/logiciels_libres-open_source_software/qgis.yml
@@ -28,3 +28,15 @@ admininstrations:
         description: 
           en: "Desktop geospatial information processing"
           fr: "Système d'information géospatiale de bureau"
+    -
+    adminCode: nrcan
+    uses: 
+      - 
+        contact: 
+          URL: ""
+        name: 
+          en: "Desktop geospatial information"
+          fr: "Système d'information géospatiale"
+        description: 
+          en: "GeoConnections: data source review and testing."
+          fr: "GéoConnexions: examen et test de la source de données."
