--- a/_data_templates/code_mandatory.yml
+++ b/_data_templates/code_mandatory.yml
@@ -1,5 +1,5 @@
 --- 
-schemaVersion:
+schemaVersion: "1.0"
 adminCode: abc-def
 releases: 
   - 
@@ -19,9 +19,7 @@ releases:
         URL: 
           en: "https://example.com/repo/example/LICENCE-en"
           fr: "https://example.com/repo/example/LICENCE-fr"
-        name: 
-          en: "Example"
-          fr: "Exemple"
+        spdxID: "XYZ-1.0"
     repositoryURL: 
       en: "https://example.com/repo/example"
       fr: "https://example.com/repo/example"
